[package]
name = "surphury-server"
version = "0.1.0"
edition = "2021"
author = "surphury"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["secrets","json"] }
rust-argon2 = "1.0.0"

[dependencies.sqlx]
version = "0.6.0"
features = ["mysql","runtime-tokio-rustls"]
