[package]
name = "surphury-server"
version = "0.1.0"
edition = "2021"
author = "surphury"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
rust-argon2 = "1.0.0"
jsonwebtoken = "8.1.1"
actix-cors = "0.6.2"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "mysql",
    "tls",
    "chrono",
    "json",
    "decimal",
    "bigdecimal",
    "uuid",
    "time",
]
